--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-/* MEDIA QUERIES - Changes the font-sizes of heading and paragraph on the main home section image (just below the navbar) according to different viewport.  */
+/* MEDIA QUERIES - Changes the font-sizes of heading and paragraph on the main home section image (just below the navbar) according to different viewport. Also changes the card container width on medium to xl sizes and sets 10px margin all across.  */
 
 @media(min-width: 0px) {
   .img-heading {
@@ -21,6 +21,9 @@
   .img-paragraph {
     font-size: 2.5rem;
   }
+  #work-section .container-fluid {
+    width: 80%;
+  }
 }
 
 
@@ -34,6 +37,9 @@
 @media(min-width: 992px) {
   .img-heading {
     font-size: 11rem;
+  }
+  #work-section .container-fluid {
+    width: 95%;
   }
 }
 
@@ -120,11 +126,6 @@ button:focus {
 
 
 /* WORK SECTION */
-
-#work-section .container-fluid {
-  width: 90%;
-}
-
 
 #work-section .card {
   box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.43);
